; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge_driver.c_merge_driver_registry_lookup.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge_driver.c_merge_driver_registry_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@merge_driver_registry = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64*, i8*)* @merge_driver_registry_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @merge_driver_registry_lookup(i64* %0, i8* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i64* %0, i64** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @merge_driver_registry_find(i64* %6, i8* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load i64*, i64** %3, align 8
  %12 = load i64, i64* %11, align 8
  %13 = call i32* @git_vector_get(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @merge_driver_registry, i32 0, i32 0), i64 %12)
  store i32* %13, i32** %5, align 8
  br label %14

14:                                               ; preds = %10, %2
  %15 = load i32*, i32** %5, align 8
  ret i32* %15
}

declare dso_local i32 @merge_driver_registry_find(i64*, i8*) #1

declare dso_local i32* @git_vector_get(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
